engine: link against LUA interpreter
This adds the capability to parse complex expressions in the config file.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -7,21 +7,21 @@ bin_PROGRAMS += dfblayers
 endif
 
 planes_SOURCES = planes.c
-planes_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CAIRO_CFLAGS) $(CAIRO_CFLAGS)
-planes_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CAIRO_LIBS) $(CJSON_LIBS)
+planes_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CAIRO_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
+planes_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CAIRO_LIBS) $(CJSON_LIBS) $(LUA_LIBS)
 planesdir = $(prefix)/share/@PACKAGE@
 planes_DATA = $(wildcard $(top_srcdir)/configs/*.png) \
 	$(wildcard $(top_srcdir)/configs/*.config)
 planes_LDFLAGS = $(AM_LDFLAGS)
 
 render_SOURCES = render.c
-render_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS)
-render_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CJSON_LIBS) $(CAIRO_LIBS)
+render_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
+render_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CJSON_LIBS) $(CAIRO_LIBS) $(LUA_LIBS)
 render_LDFLAGS = $(AM_LDFLAGS)
 
 grab_SOURCES = grab.c
-grab_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS)
-grab_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CJSON_LIBS) $(CAIRO_LIBS)
+grab_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
+grab_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CJSON_LIBS) $(CAIRO_LIBS) $(LUA_LIBS)
 grab_LDFLAGS = $(AM_LDFLAGS)
 
 dfblayers_SOURCES = dfblayers.c
