configs: rework all configs to automatically scale
This makes the configs work with almost any screen resolution.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/configs/alpha2.config
+++ b/configs/alpha2.config
@@ -6,49 +6,50 @@
        	    "image": "background2.png",
     	    "text": {
 		"str": "Pixel Alpha Blending",
-		"x": 10,
-		"y": 460,
-		"color": "0xffffffff"
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 0,
-	    "y": 140,
-	    "width": 200,
-	    "height": 200,
+    	    "x": "physicalw((200 * 0) + (50 * 1))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
 	    "pattern": [ "0x0000ffaa" ],
 	    "move-type": [ "x-bounce", "y-bounce" ],
-	    "move-xspeed": 6,
-    	    "move-yspeed": -5
+	    "move-xspeed": 4,
+    	    "move-yspeed": -3
 	},
 	{
 	    "type": "overlay",
 	    "index": 1,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 600,
-	    "y": 140,
-	    "width": 200,
-	    "height": 200,
+       	    "x": "physicalw((200 * 1) + (50 * 2))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
 	    "pattern": [ "0x00ff00aa" ],
     	    "move-type": [ "x-bounce", "y-bounce" ],
-	    "move-xspeed": 6,
-       	    "move-yspeed": 5
+	    "move-xspeed": 4,
+       	    "move-yspeed": 3
 	},
 	{
 	    "type": "overlay",
 	    "index": 2,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 300,
-	    "y": 140,
-	    "width": 200,
-	    "height": 200,
+      	    "x": "physicalw((200 * 2) + (50 * 3))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
 	    "pattern": [ "0xff0000aa"],
 	    "move-type": [ "x-bounce", "y-bounce"],
-    	    "move-xspeed": 3,
-	    "move-yspeed": 4
+    	    "move-xspeed": 2,
+	    "move-yspeed": 3
 	}
     ]
 }
