--- a/configs/default.config
+++ b/configs/default.config
@@ -5,66 +5,71 @@
        	    "patch": true,
 	    "format": "DRM_FORMAT_XRGB8888",
     	    "text": [
-	    {
-		"str": "Primary 0",
-		"x": "1%",
-		"y": "98%",
-      		"color": "0x000000ff"
-	    },
-	    {
-		"str": "Hardware Planes",
-		"x": "1%",
-		"y": "8%",
-      		"color": "0xffffffff"
-	    }
+	    	    {
+		    	"str": "Primary 0",
+			"x": "physicalw(10)",
+			"y": "SCREEN_HEIGHT-physicalh(10)",
+			"color": "0x000000ff",
+			"size": "physicalw(24)"
+		    },
+	    	    {
+			"str": "Hardware Planes",
+			"x": "physicalw(10)",
+			"y": "physicalh(10 + 24)",
+      			"color": "0xffffffff",
+			"size": "physicalw(24)"
+	    	    }
 	    ]
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
-	    "x": "11.25%",
-	    "y": "29.5%",
-	    "width": "25%",
-	    "height": "41%",
+	    "x": "physicalw((200 * 0) + (50 * 1))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
        	    "pattern": [ "0x0000ffff", "0xffffffff" ],
 	    "format": "DRM_FORMAT_ARGB8888",
        	    "text": {
 		"str": "Overlay 0",
-		"x": "5%",
-		"y": "95%",
-      		"color": "0x000000ff"
+		"x": "physicalw(10)",
+		"y": "physicalh(190)",
+      		"color": "0x000000ff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 1,
-	    "x": "37.5%",
-	    "y": "29.5%",
-    	    "width": "25%",
-	    "height": "41%",
+	    "x": "physicalw((200 * 1) + (50 * 2))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
        	    "pattern": [ "0x00ff00ff", "0xffffffff" ],
     	    "format": "DRM_FORMAT_ARGB8888",
       	    "text": {
 		"str": "Overlay 1",
-		"x": "5%",
-		"y": "95%",
-		"color": "0x000000ff"
+		"x": "physicalw(10)",
+		"y": "physicalh(190)",
+		"color": "0x000000ff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 2,
-	    "x": "63.75%",
-	    "y": "29.5%",
-	    "width": "25%",
-	    "height": "41%",
+    	    "x": "physicalw((200 * 2) + (50 * 3))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
 	    "pattern": [ "0xff0000ff", "0xffffffff" ],
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "text": {
 		"str": "Overlay 2",
-		"x": "5%",
-		"y": "95%",
-      		"color": "0x000000ff"
+		"x": "physicalw(10)",
+		"y": "physicalh(190)",
+      		"color": "0x000000ff",
+		"size": "physicalw(24)"
 	    }
 	}
     ]
