--- a/configs/pan.config
+++ b/configs/pan.config
@@ -8,31 +8,31 @@
 	{
 	    "type": "overlay",
 	    "index": 2,
-	    "x": 250,
-	    "y": 90,
-	    "width": 1580,
-	    "height": 480,
+	    "x": "(SCREEN_WIDTH / 2) - (physicalw(300) / 2)",
+	    "y": "physicalh(90)",
+	    "width": "physicalw(1580)",
+	    "height": "physicalh(480)",
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "image": "view.png",
 	    "pan-x": 0,
-	    "pan-y": 40,
-	    "pan-width": 300,
-	    "pan-height": 300,
+	    "pan-y": "physicalh(40)",
+	    "pan-width": "physicalw(300)",
+	    "pan-height": "physicalh(300)",
     	    "move-type": [ "panx-bounce","y-bounce-custom" ],
 	    "move-xspeed": 2,
 	    "move-yspeed": 2,
     	    "move-panxspeed": 2,
-    	    "move-ymax": 180,
+    	    "move-ymax": "physicalh(180)",
     	    "move-ymin": 0
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 300,
-	    "y": 140,
-	    "width": 200,
-	    "height": 200,
+	    "x": 0,
+	    "y": 0,
+       	    "width": "physicalw(200)",
+	    "height": "physicalh(200)",
 	    "pattern": [ "0xffffff55" ],
 	    "move-type": [ "x-bounce", "y-bounce" ],
 	    "move-xspeed": 4,
@@ -44,14 +44,15 @@
     	    "format": "DRM_FORMAT_ARGB8888",
 	    "x": 0,
 	    "y": 0,
-	    "width": 800,
-	    "height": 480,
+	    "width": "SCREEN_WIDTH",
+	    "height": "SCREEN_HEIGHT",
 	    "pattern": [ "0x00000000" ],
        	    "text": {
-		"str": "Moving Overlay Pan with Alpha Blending",
-		"x": 10,
-		"y": 460,
-    		"color": "0xffffffff"
+		"str": "Moving Overlay Pan with Alpha",
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+    		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
 	}
     ]
