--- a/configs/rotate.config
+++ b/configs/rotate.config
@@ -7,50 +7,51 @@
 	    "image": "background6.png",
     	    "text": {
 		"str": "Rotate Overlays",
-		"x": 10,
-		"y": 460,
-		"color": "0xffffffff"
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 0,
-	    "y": 100,
-	    "width": 100,
-	    "height": 100,
+	    "x": "physicalw(50)",
+	    "y": "physicalh(50)",
+       	    "width": "physicalw(100)",
+	    "height": "physicalh(100)",
 	    "image": "satellite.png",
 	    "move-type": [ "x-bounce", "y-bounce" ],
-	    "move-xspeed": 3,
-    	    "move-yspeed": -2,
+	    "move-xspeed": "SCREEN_WIDTH / 266",
+    	    "move-yspeed": "-SCREEN_WIDTH / 400",
 	    "transform": [ "rotate-clockwise" ]
 	},
 	{
 	    "type": "overlay",
 	    "index": 1,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 600,
-	    "y": 100,
-	    "width": 100,
-	    "height": 100,
+    	    "x": "physicalw(200)",
+	    "y": "physicalh(200)",
+    	    "width": "physicalw(100)",
+	    "height": "physicalh(100)",
 	    "image": "satellite.png",
     	    "move-type": [ "x-bounce", "y-bounce" ],
-	    "move-xspeed": -4,
-       	    "move-yspeed": 2,
+	    "move-xspeed": "-SCREEN_WIDTH / 200",
+       	    "move-yspeed": "SCREEN_WIDTH / 400",
 	    "transform": [ "rotate-cclockwise" ]
 	},
 	{
 	    "type": "overlay",
 	    "index": 2,
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 300,
-	    "y": 100,
-	    "width": 100,
-	    "height": 100,
+       	    "x": "physicalw(400)",
+	    "y": "physicalh(300)",
+	    "width": "physicalw(100)",
+	    "height": "physicalh(100)",
 	    "image": "satellite.png",
 	    "move-type": [ "x-bounce", "y-bounce"],
-    	    "move-xspeed": 2,
+    	    "move-xspeed": "SCREEN_WIDTH / 400",
 	    "move-yspeed": 1,
 	    "transform": [ "rotate-clockwise" ]
 	}
