--- a/configs/window.config
+++ b/configs/window.config
@@ -11,43 +11,44 @@
 	    "index": 2,
 	    "x": 0,
 	    "y": 0,
-	    "width": 800,
-	    "height": 480,
+	    "width": "SCREEN_WIDTH",
+	    "height": "SCREEN_HEIGHT",
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "image": "view2.png",
 	    "pan-x": 0,
 	    "pan-y": 0,
-	    "pan-width": 800,
-	    "pan-height": 100,
-    	    "move-type": ["pany-bounce", "y-bounce-custom"],
-	    "move-yspeed": 2,
-    	    "move-panyspeed": 2,
-       	    "move-ymax": 380,
+	    "pan-width": "SCREEN_WIDTH",
+	    "pan-height": "SCREEN_HEIGHT/2",
+    	    "move-type": [ "pany-bounce", "y-bounce-custom" ],
+	    "move-yspeed": 1,
+    	    "move-panyspeed": 1,
+       	    "move-ymax": "SCREEN_HEIGHT/2",
    	    "move-ymin": 0
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
 	    "x": 0,
-	    "y": 430,
-	    "width": 400,
-	    "height": 50,
+	    "y": 0,
+	    "width": "SCREEN_WIDTH",
+	    "height": "SCREEN_HEIGHT",
        	    "pattern": [ "0x00000000" ],
 	    "format": "DRM_FORMAT_ARGB8888",
             "text": {
 		"str": "Overlay Window Panning",
-		"x": 10,
-		"y": 30,
-		"color": "0xffffffff"
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 1,
-	    "x": 10,
-	    "y": 10,
-	    "width": 120,
-	    "height": 28,
+	    "x": "physicalw(10)",
+	    "y": "physicalh(10)",
+	    "width": "physicalw(120)",
+	    "height": "physicalh(28)",
        	    "image": "logo.png",
 	    "format": "DRM_FORMAT_ARGB8888"
 	}
