--- a/configs/parallax.config
+++ b/configs/parallax.config
@@ -5,41 +5,42 @@
     	    "format": "DRM_FORMAT_RGB565",
     	    "image": "parallax0.png",
 	     "text": {
-		"str": "3D Parallax Animation with Overlays",
-		"x": 350,
-		"y": 40,
-		"color": "0xffffffff"
+		"str": "3D Parallax Animation",
+		"x": "physicalw(520)",
+		"y": "physicalh(10 + 24)",
+		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
 	},
 	{
 	    "type": "overlay",
 	    "index": 2,
 	    "x": 0,
-	    "y": 100,
-	    "width": 1600,
-	    "height": 380,
+	    "y": "physicalh(100)",
+	    "width": "physicalw(1600)",
+	    "height": "physicalh(380)",
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "image": "parallax1.png",
 	    "pan-x": 0,
 	    "pan-y": 0,
-	    "pan-width": 800,
-	    "pan-height": 380,
+	    "pan-width": "physicalw(800)",
+	    "pan-height": "physicalh(380)",
     	    "move-type": ["panx-warp"],
-    	    "move-panxspeed": 1
+	    "move-panxspeed": 1
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
 	    "x": 0,
-	    "y": 300,
-	    "width": 1600,
-	    "height": 180,
+	    "y": "physicalh(300)",
+            "width": "physicalw(1600)",
+    	    "height": "physicalh(180)",
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "image": "parallax2.png",
 	    "pan-x": 0,
 	    "pan-y": 0,
-	    "pan-width": 800,
-	    "pan-height": 180,
+	    "pan-width": "physicalw(800)",
+	    "pan-height": "physicalh(180)",
     	    "move-type": ["panx-warp"],
     	    "move-panxspeed": 2
 	},
@@ -48,15 +49,15 @@
 	    "type": "overlay",
     	    "format": "DRM_FORMAT_ARGB8888",
 	    "index": 1,
-	    "x": 350,
-	    "y": 315,
-	    "width": 1000,
-	    "height": 579,
+	    "x": "(SCREEN_WIDTH / 2) - (physicalw(113) / 2)",
+	    "y": "physicalh(315)",
+	    "width": "physicalw(1000)",
+	    "height": "physicalh(579)",
 	    "image": "ninja.png",
-	    "sprite-x": 15,
-	    "sprite-y": 122,
-	    "sprite-width": 113,
-	    "sprite-height": 122,
+	    "sprite-x": "physicalw(15)",
+	    "sprite-y": "physicalh(122)",
+	    "sprite-width": "physicalw(113)",
+	    "sprite-height": "physicalh(122)",
     	    "sprite-count": 6,
        	    "sprite-speed": 5,
     	    "move-type": ["sprite"]
