--- a/configs/scale.config
+++ b/configs/scale.config
@@ -1,5 +1,5 @@
 {
-    "framedelay": 10,
+    "framedelay": 20,
     "planes": [
 	{
             "type": "primary",
@@ -11,36 +11,37 @@
 	    "index": 2,
     	    "format": "DRM_FORMAT_XRGB8888",
 	    "image": "mars.png",
-	    "x": 200,
-	    "y": 120,
-	    "width": 400,
-	    "height": 240,
+	    "x": "(SCREEN_WIDTH / 2) - (physicalw(400) / 2)",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(240) / 2)",
+	    "width": "physicalw(400)",
+	    "height": "physicalh(240)",
 	    "pattern": [ "0xff0000aa", "0x00ff00aa" ],
-	    "move-type": ["scaler", "y-bounce-custom", "x-bounce-custom" ],
+	    "move-type": [ "scaler", "y-bounce-custom", "x-bounce-custom" ],
 	    "scaler-speed": 0.01,
     	    "scaler-max": 2.0,
        	    "scaler-min": 0.5,
 	    "move-xspeed": 1,
 	    "move-xmin": 0,
-	    "move-xmax": 400,
+	    "move-xmax": "physicalw(320)",
 	    "move-yspeed": 1,
 	    "move-ymin": 0,
-	    "move-ymax": 240
+	    "move-ymax": "physicaly(192)"
 	},
 	{
 	    "type": "overlay",
 	    "index": 1,
-    	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 0,
-	    "y": 430,
-	    "width": 400,
-	    "height": 50,
+       	    "format": "DRM_FORMAT_ARGB8888",
+    	    "x": 0,
+	    "y": 0,
+	    "width": "SCREEN_WIDTH",
+	    "height": "SCREEN_HEIGHT",
 	    "pattern": [ "0x00000000" ],
        	    "text": {
 		"str": "High End Overlay Scaling",
-		"x": 10,
-		"y": 30,
-		"color": "0x000000ff"
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"color": "0x000000ff",
+		"size": "physicalw(24)"
 	    }
 	}
     ]
