--- a/configs/sprite.config
+++ b/configs/sprite.config
@@ -6,27 +6,28 @@
             "image": "grass.png",
             "text": {
 		"str": "Sprite Animation",
-		"x": 10,
-		"y": 460,
-		"color": "0xffffffff"
+		"x": "physicalw(10)",
+		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"color": "0xffffffff",
+		"size": "physicalw(24)"
 	    }
         },
 	{
 	    "type": "overlay",
     	    "format": "DRM_FORMAT_ARGB8888",
 	    "index": 1,
-	    "x": 350,
-            "y": 235,
-            "width": 584,
-            "height": 438,
+	    "x": 0,
+	    "y": "physicalh(235)",
+            "width": "physicalw(584)",
+            "height": "physicalh(438)",
             "image": "rooster.png",
             "sprite-x": 0,
             "sprite-y": 0,
-            "sprite-width": 146,
-            "sprite-height": 146,
+            "sprite-width": "physicalw(146)",
+            "sprite-height": "physicalh(146)",
             "sprite-count": 12,
             "move-type": [ "sprite", "x-warp" ],
-	    "move-xspeed" : 7,
+	    "move-xspeed" : "SCREEN_WIDTH / 133",
             "name": "overlay2"
 	}
     ]
