--- a/configs/rotate.config
+++ b/configs/rotate.config
@@ -3,7 +3,7 @@
     "planes": [
 	{
             "type": "primary",
-	    "format": "DRM_FORMAT_ARGB8888",
+	    "format": "DRM_FORMAT_XRGB8888",
 	    "image": "background6.png",
     	    "text": {
 		"str": "Rotate Overlays",
@@ -42,6 +42,7 @@
 	    "transform": [ "rotate-cclockwise" ]
 	},
 	{
+	    "enabled" : false,
 	    "type": "overlay",
 	    "index": 2,
     	    "format": "DRM_FORMAT_ARGB8888",
