--- a/configs/sprite.config
+++ b/configs/sprite.config
@@ -5,7 +5,7 @@
             "format": "DRM_FORMAT_ARGB8888",
             "image": "grass.png",
             "text": {
-		"str": "Sprite Animation",
+		"str": "2D Sprite Animation",
 		"x": "physicalw(10)",
 		"y": "SCREEN_HEIGHT-physicalh(10)",
 		"color": "0xffffffff",
