--- a/configs/window.config
+++ b/configs/window.config
@@ -18,39 +18,29 @@
 	    "pan-x": 0,
 	    "pan-y": 0,
 	    "pan-width": "SCREEN_WIDTH",
-	    "pan-height": "SCREEN_HEIGHT/2",
+	    "pan-height": "SCREEN_HEIGHT/4",
     	    "move-type": [ "pany-bounce", "y-bounce-custom" ],
 	    "move-yspeed": 1,
     	    "move-panyspeed": 1,
-       	    "move-ymax": "SCREEN_HEIGHT/2",
+       	    "move-ymax": "(SCREEN_HEIGHT/4) * 3",
    	    "move-ymin": 0
 	},
 	{
 	    "type": "overlay",
 	    "index": 0,
 	    "x": 0,
-	    "y": 0,
+	    "y": "(SCREEN_HEIGHT/4) * 3",
 	    "width": "SCREEN_WIDTH",
-	    "height": "SCREEN_HEIGHT",
+	    "height": "SCREEN_HEIGHT/4",
        	    "pattern": [ "0x00000000" ],
 	    "format": "DRM_FORMAT_ARGB8888",
             "text": {
 		"str": "Overlay Window Panning",
 		"x": "physicalw(10)",
-		"y": "SCREEN_HEIGHT-physicalh(10)",
+		"y": "(SCREEN_HEIGHT/4)-physicalh(10)",
 		"color": "0xffffffff",
 		"size": "physicalw(24)"
 	    }
-	},
-	{
-	    "type": "overlay",
-	    "index": 1,
-	    "x": "physicalw(10)",
-	    "y": "physicalh(10)",
-	    "width": "physicalw(120)",
-	    "height": "physicalh(28)",
-       	    "image": "logo.png",
-	    "format": "DRM_FORMAT_ARGB8888"
 	}
     ]
 }
