python: fix module import issue with some versions of swig
With versions of swig >= 3.0.9, the loader code they put in does not
work if put in __init__.py with the following error:

    >>> import planes
    ...
    ImportError: No module named _planes

This change instead leaves the wrapper in planes.pyc and creates a generic
__init__.pyc.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -17,20 +17,21 @@ PYTHON_BUILT = planes_wrap.c planes.py
 BUILT_SOURCES = $(PYTHON_BUILT)
 
 pythonextdir = $(PYTHON_SITE_PKG)/planes
-pythonext_SCRIPTS = __init__.pyc
+pythonext_SCRIPTS = __init__.pyc planes.pyc
 pythonext_LTLIBRARIES = _planes.la
 _planes_la_SOURCES = planes_wrap.c $(SWIG_SRC)
 _planes_la_CFLAGS = $(AM_CFLAGS) $(PYTHON_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
 _planes_la_LDFLAGS = -module
 _planes_la_LIBADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CAIRO_LIBS) $(CJSON_LIBS) $(LUA_LIBS)
 
-
 CLEANFILES = $(PYTHON_BUILT) $(pythonext_SCRIPTS)
 PYTHONC_V_GEN = $(pythonc_v_GEN_$(V))
 pythonc_v_GEN_ = $(pythonc_v_GEN_$(AM_DEFAULT_VERBOSITY))
 pythonc_v_GEN_0 = @echo "  PYTHONC " $@;
 
-__init__.pyc: planes.py
+__init__.pyc: __init__.py
+	$(PYTHONC_V_GEN)$(PYTHON) -c 'import py_compile, sys; py_compile.compile(sys.argv[1], sys.argv[2])' $< $@
+planes.pyc: planes.py
 	$(PYTHONC_V_GEN)$(PYTHON) -c 'import py_compile, sys; py_compile.compile(sys.argv[1], sys.argv[2])' $< $@
 planes.py: planes_wrap.c
 
