configs/scale: fix typo in function name
Fix error in config for determining move-maxy value.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/configs/scale.config
+++ b/configs/scale.config
@@ -25,7 +25,7 @@
 	    "move-xmax": "physicalw(320)",
 	    "move-yspeed": 1,
 	    "move-ymin": 0,
-	    "move-ymax": "physicaly(192)"
+	    "move-ymax": "physicalh(192)"
 	},
 	{
 	    "type": "overlay",
