remove non public kms functions from the API
This is done by seperating the kms.h hader into a public and private header.
This also adds documentation to the public header.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -14,7 +14,8 @@ fb.c \
 common.h \
 common.c \
 script.h \
-script.c
+script.c \
+p_kms.h
 
 libplanesincludedir = ${includedir}/planes
 libplanesinclude_HEADERS = $(top_srcdir)/include/planes/engine.h \
