fix install path of config files
Commit 6ca455239e broke the install path of the demo config files because it is
based off the package name which changed from planes to libplanes.  Don't use
the package name and keep the config files at /usr/shar/planes.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/apps/Makefile.am
+++ b/apps/Makefile.am
@@ -9,7 +9,7 @@ endif
 planes_SOURCES = planes.c
 planes_CFLAGS = $(AM_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
 planes_LDADD = $(top_builddir)/src/libplanes.la $(LIBDRM_LIBS) $(CAIRO_LIBS) $(CJSON_LIBS) $(LUA_LIBS)
-planesdir = $(prefix)/share/@PACKAGE@
+planesdir = $(prefix)/share/planes
 planes_DATA = $(wildcard $(top_srcdir)/configs/*.png) \
 	$(wildcard $(top_srcdir)/configs/*.config)
 planes_LDFLAGS = $(AM_LDFLAGS)
