fix building python module
Commit a3a0ff14579 introduced an issue where the necssary python wrapper is not
linked into the _planes.so file.  Re-add the file back.

Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/python/Makefile.am
+++ b/python/Makefile.am
@@ -21,7 +21,7 @@ PYTHON_BUILT = planes_wrap.c planes.py
 pythonext_LTLIBRARIES = _planes.la
 pythonextdir = $(PYTHON_SITE_PKG)/planes
 pythonext_SCRIPTS = __init__.py __init__.pyc planes.py planes.pyc
-_planes_la_SOURCES =
+_planes_la_SOURCES = planes_wrap.c
 EXTRA__planes_la_SOURCES = planes_wrap.c
 _planes_la_CFLAGS = $(AM_CFLAGS) $(PYTHON_CFLAGS) $(LIBDRM_CFLAGS) $(CJSON_CFLAGS) $(CAIRO_CFLAGS) $(LUA_CFLAGS)
 _planes_la_LDFLAGS = -module
