support at91sam9x5 processors with cursor plane
Adds libplanes support for at91sam9x5 processors with cursor plane

Signed-off-by: Prasanthi Chellakumar <prasanthi.chellakumar@microchip.com>

--- a/configs/paper.config
+++ b/configs/paper.config
@@ -38,6 +38,7 @@
 	    "transform": ["flip-horizontal"]
 	},
 	{
+	    "enabled": "checkplane('overlay', 2)",
 	    "type": "overlay",
 	    "format": "DRM_FORMAT_ARGB8888",
 	    "index": 2,
@@ -48,6 +49,19 @@
 	    "image": "plane3.png",
 	    "move-type": ["x-bounce-out"],
 	    "move-xspeed": 6
-	}
+	},
+	{
+            "enabled": "checkplane('cursor', 0)",
+            "type": "cursor",
+            "format": "DRM_FORMAT_ARGB8888",
+            "index": 0,
+            "x": 0,
+            "y": "physicalh(298)",
+            "width": "physicalw(128)",
+            "height": "physicalh(128)",
+            "image": "plane3.png",
+            "move-type": ["x-bounce-out"],
+            "move-xspeed": 6
+        }
     ]
 }
