--- a/configs/alpha.config
+++ b/configs/alpha.config
@@ -41,6 +41,7 @@
     	    "alpha": "0xaa"
 	},
 	{
+	    "enabled": "checkplane('overlay', 2)",
 	    "type": "overlay",
 	    "index": 2,
     	    "format": "DRM_FORMAT_XRGB8888",
@@ -53,6 +54,21 @@
     	    "move-xspeed": 2,
 	    "move-yspeed": 3,
 	    "alpha": "0xaa"
-	}
+	},
+	{
+            "enabled": "checkplane('cursor', 0)",
+            "type": "cursor",
+            "index": 0,
+            "format": "DRM_FORMAT_XRGB8888",
+            "x": "physicalw((200 * 2) + (50 * 3))",
+            "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+            "width": "physicalw(128)",
+            "height": "physicalh(128)",
+            "pattern": [ "0xff0000aa"],
+            "move-type": [ "x-bounce", "y-bounce"],
+            "move-xspeed": 2,
+            "move-yspeed": 3,
+            "alpha": "0xaa"
+        }
     ]
 }
