--- a/configs/alpha2.config
+++ b/configs/alpha2.config
@@ -39,6 +39,7 @@
        	    "move-yspeed": 3
 	},
 	{
+	    "enabled": "checkplane('overlay', 2)",
 	    "type": "overlay",
 	    "index": 2,
     	    "format": "DRM_FORMAT_ARGB8888",
@@ -50,6 +51,20 @@
 	    "move-type": [ "x-bounce", "y-bounce"],
     	    "move-xspeed": 2,
 	    "move-yspeed": 3
-	}
+	},
+	{
+            "enabled": "checkplane('cursor', 0)",
+            "type": "cursor",
+            "index": 0,
+            "format": "DRM_FORMAT_ARGB8888",
+            "x": "physicalw((200 * 2) + (50 * 3))",
+            "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+            "width": "physicalw(128)",
+            "height": "physicalh(128)",
+            "pattern": [ "0xff0000aa"],
+            "move-type": [ "x-bounce", "y-bounce"],
+            "move-xspeed": 2,
+            "move-yspeed": 3
+        }
     ]
 }
