--- a/configs/default.config
+++ b/configs/default.config
@@ -56,6 +56,7 @@
 	    }
 	},
 	{
+	    "enabled" : "checkplane('overlay', 2)",
 	    "type": "overlay",
 	    "index": 2,
     	    "x": "physicalw((200 * 2) + (50 * 3))",
@@ -71,6 +72,17 @@
       		"color": "0x000000ff",
 		"size": "physicalw(24)"
 	    }
+	},
+	{
+	    "enabled" : "checkplane('cursor', 0)",
+	    "type": "cursor",
+	    "index": 0,
+	    "x": "physicalw((200 * 2) + (50 * 3))",
+	    "y": "(SCREEN_HEIGHT / 2) - (physicalh(200) / 2)",
+	    "width": "physicalw(128)",
+	    "height": "physicalh(128)",
+	    "pattern": [ "0xff0000ff", "0xffffffff" ],
+	    "format": "DRM_FORMAT_ARGB8888"
 	}
     ]
 }
