fix cursor plane logic
Fixes the lua boolean logic so correct boolean expressions can be written
and used in the config files. Also add text support for cursor planes used by
the examples.

Signed-off-by: Prasanthi Chellakumar <prasanthi.chellakumar@microchip.com>
Signed-off-by: Joshua Henderson <joshua.henderson@microchip.com>

--- a/configs/paper.config
+++ b/configs/paper.config
@@ -51,7 +51,8 @@
 	    "move-xspeed": 6
 	},
 	{
-            "enabled": "checkplane('cursor', 0)",
+	    "enabled": "not(checkplane('overlay', 2)) and
+			checkplane('cursor', 0)",
             "type": "cursor",
             "format": "DRM_FORMAT_ARGB8888",
             "index": 0,
