--- a/configs/default.config
+++ b/configs/default.config
@@ -56,7 +56,7 @@
 	    }
 	},
 	{
-	    "enabled" : "checkplane('overlay', 2)",
+	    "enabled": "checkplane('overlay', 2)",
 	    "type": "overlay",
 	    "index": 2,
     	    "x": "physicalw((200 * 2) + (50 * 3))",
@@ -74,7 +74,8 @@
 	    }
 	},
 	{
-	    "enabled" : "checkplane('cursor', 0)",
+	    "enabled": "not(checkplane('overlay', 2)) and
+			checkplane('cursor', 0)",
 	    "type": "cursor",
 	    "index": 0,
 	    "x": "physicalw((200 * 2) + (50 * 3))",
@@ -82,7 +83,14 @@
 	    "width": "physicalw(128)",
 	    "height": "physicalh(128)",
 	    "pattern": [ "0xff0000ff", "0xffffffff" ],
-	    "format": "DRM_FORMAT_ARGB8888"
+	    "format": "DRM_FORMAT_ARGB8888",
+	    "text": {
+		"str": "Cursor 0",
+		"x": "physicalw(10)",
+		"y": "physicalh(110)",
+		"color": "0x000000ff",
+		"size": "physicalw(24)"
+            }
 	}
     ]
 }
