configs: modify index to match products with 2 overlays
Some products only have 2 overlays and a primary plane. Most of the demos
assume that 2 overlays are present, adapt these demo configs.
WARNING: not compatible with other SoCs: to be adapted if we want to
make it more generic.

Signed-off-by: Nicolas Ferre <nicolas.ferre@microchip.com>

--- a/configs/pan.config
+++ b/configs/pan.config
@@ -7,7 +7,7 @@
 	},
 	{
 	    "type": "overlay",
-	    "index": 2,
+	    "index": 1,
 	    "x": "(SCREEN_WIDTH / 2) - (physicalw(300) / 2)",
 	    "y": "physicalh(90)",
 	    "width": "physicalw(1580)",
@@ -31,24 +31,11 @@
     	    "format": "DRM_FORMAT_ARGB8888",
 	    "x": 0,
 	    "y": 0,
-       	    "width": "physicalw(200)",
-	    "height": "physicalh(200)",
-	    "pattern": [ "0xffffff55" ],
-	    "move-type": [ "x-bounce", "y-bounce" ],
-	    "move-xspeed": 4,
-    	    "move-yspeed": 3
-	},
-	{
-	    "type": "overlay",
-	    "index": 1,
-    	    "format": "DRM_FORMAT_ARGB8888",
-	    "x": 0,
-	    "y": 0,
 	    "width": "SCREEN_WIDTH",
 	    "height": "SCREEN_HEIGHT",
 	    "pattern": [ "0x00000000" ],
        	    "text": {
-		"str": "Moving Overlay Pan with Alpha",
+		"str": "Moving Overlay Pan",
 		"x": "physicalw(10)",
 		"y": "SCREEN_HEIGHT-physicalh(10)",
     		"color": "0xffffffff",
