--- a/configs/parallax.config
+++ b/configs/parallax.config
@@ -13,6 +13,7 @@
 	    }
 	},
 	{
+	    "enabled": false,
 	    "type": "overlay",
 	    "index": 2,
 	    "x": 0,
@@ -30,7 +31,7 @@
 	},
 	{
 	    "type": "overlay",
-	    "index": 0,
+	    "index": 1,
 	    "x": 0,
 	    "y": "physicalh(300)",
             "width": "physicalw(1600)",
@@ -48,7 +49,7 @@
 	    "enabled": true,
 	    "type": "overlay",
     	    "format": "DRM_FORMAT_ARGB8888",
-	    "index": 1,
+	    "index": 0,
 	    "x": "(SCREEN_WIDTH / 2) - (physicalw(113) / 2)",
 	    "y": "physicalh(315)",
 	    "width": "physicalw(1000)",
