--- a/configs/scale.config
+++ b/configs/scale.config
@@ -8,7 +8,7 @@
 	},
 	{
 	    "type": "overlay",
-	    "index": 2,
+	    "index": 1,
     	    "format": "DRM_FORMAT_XRGB8888",
 	    "image": "mars.png",
 	    "x": "(SCREEN_WIDTH / 2) - (physicalw(400) / 2)",
@@ -18,18 +18,18 @@
 	    "pattern": [ "0xff0000aa", "0x00ff00aa" ],
 	    "move-type": [ "scaler", "y-bounce-custom", "x-bounce-custom" ],
 	    "scaler-speed": 0.01,
-    	    "scaler-max": 2.0,
+	    "scaler-max": 1.0,
        	    "scaler-min": 0.5,
 	    "move-xspeed": 1,
 	    "move-xmin": 0,
-	    "move-xmax": "physicalw(320)",
+	    "move-xmax": "(SCREEN_WIDTH - physicalw(400))",
 	    "move-yspeed": 1,
 	    "move-ymin": 0,
-	    "move-ymax": "physicalh(192)"
+	    "move-ymax": "(SCREEN_HEIGHT - physicalh(240))"
 	},
 	{
 	    "type": "overlay",
-	    "index": 1,
+	    "index": 0,
        	    "format": "DRM_FORMAT_ARGB8888",
     	    "x": 0,
 	    "y": 0,
