--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,11 @@
 cmake_minimum_required(VERSION 3.23)
 
 project(libplanes
-    VERSION 1.1.0
+    VERSION 2.0.0
     DESCRIPTION "Microchip hardware LCD plane library"
     LANGUAGES C
 )
-#set(PROJECT_VERSION_RC 1)
+set(PROJECT_VERSION_RC 1)
 if(DEFINED PROJECT_VERSION_RC)
     string(APPEND PROJECT_VERSION "-rc${PROJECT_VERSION_RC}")
 endif()
