don't hard code the type of library to create
Add the BUILD_SHARED_LIBS option, and remove the type to add_library to
allow choosing SHARED or STATIC depending the value of
BUILD_SHARED_LIBS.

Signed-off-by: Ludovic Desroches <ludovic.desroches@microchip.com>
Acked-by: Cyrille Pitchen <cyrille.pitchen@microchip.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,6 +35,8 @@ add_compile_options(-Winline)
 add_compile_options(-Wshadow)
 add_compile_options(-Wno-missing-field-initializers)
 
+option(BUILD_SHARED_LIBS "Build using shared libraries" ON)
+
 find_package(PkgConfig REQUIRED)
 
 pkg_check_modules(LIBDRM REQUIRED libdrm>=2.4.0)
