re-introduce documentation generation
While switching from autotools to CMake, the documentation generation
had been removed. Re-introduce a docs target.

Signed-off-by: Ludovic Desroches <ludovic.desroches@microchip.com>
Acked-by: Cyrille Pitchen <cyrille.pitchen@microchip.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -70,3 +70,12 @@ endif()
 if(Python3_FOUND AND SWIG_FOUND)
     add_subdirectory(python)
 endif()
+
+find_package(Doxygen COMPONENTS doxygen)
+if(Doxygen_FOUND)
+    set(DOXYGEN_FILE_PATTERNS *.c *.h *.md)
+    set(DOXYGEN_PROJECT_LOGO "${PROJECT_SOURCE_DIR}/docs/logo55.png")
+    set(DOXYGEN_USE_MDFILE_AS_MAINPAGE "${PROJECT_SOURCE_DIR}/README.md")
+    set(DOXYGEN_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/docs")
+    doxygen_add_docs(docs ${PROJECT_SOURCE_DIR})
+endif()
